# Crypto-Payment-Gateway

./: .dockerignore  .env  .env.docker  AI_RULES.md  ARCHITECTURE_DECISIONS.md  CHANGELOG.md  Cargo.toml  Dockerfile  MEMORY.md  PRODUCT_REQUIREMENTS.md  PROJECT_STRUCTURE.md  README.md  ROADMAP.md  docker-compose.yml
.claude/: settings.local.json
.sqlx/: query-701a1bb996076f4132996325390e6e0f501331d9fcc388a41daa761c9e9c116f.json  query-be43107840e23a4ea71fa525572d94ce835f6f599332957bad144dd4ab5b5de7.json  query-ce7d7684b2b1647d76e471ad03892f94257507978d6b6ebec93194ed142538f3.json  query-ed11b0b902f281fb2f7a36c8b1354334973d1cebe58bf0a85d452314b0853e77.json
docs/: domain-model.md  event-storming.md
migrations/: 20260613154545_create_merchants_table.sql  20260613195020_create_wallets_table.sql  20260613202002_create_invoices_table.sql  20260613205347_create_payments_table.sql  20260613210851_create_webhook_events_table.sql  20260613210853_create_webhooks_table.sql  20260613210854_create_webhook_deliveries_table.sql  20260613210855_create_settlements_table.sql  20260613210856_create_settlement_batches_table.sql  20260613210857_create_audit_logs_table.sql  20260613210858_add_bsc_tron_networks.sql.sql  20260616000000_add_bnb_asset.sql  20260616000001_create_wallet_keys_table.sql
sdk/: Cargo.toml
sdk/src/: client.rs  error.rs  lib.rs  types.rs
src/: main.rs  openapi.rs
src/config/: mod.rs
src/infrastructure/: database.rs  invoice_repository.rs  merchant_repository.rs  mod.rs  payment_repository.rs  settlement_repository.rs  wallet_key_repository.rs  wallet_repository.rs  webhook_repository.rs
src/infrastructure/blockchain/: chain_adapter.rs  ethereum_client.rs  mod.rs  multi_chain_watcher.rs  rpc_client.rs  transaction_watcher.rs  tron_client.rs
src/infrastructure/blockchain/adapters/: bsc.rs  ethereum.rs  mod.rs  solana.rs  tron.rs
src/infrastructure/vault/: key_vault.rs  mod.rs
src/middleware/: auth.rs  rate_limit.rs  request_id.rs
src/modules/: mod.rs
src/modules/admin/: audit.rs  handlers.rs  mod.rs  routes.rs  use_cases.rs
src/modules/invoice/: domain.rs  errors.rs  handlers.rs  mod.rs  repository.rs  routes.rs  use_cases.rs
src/modules/merchant/: domain.rs  errors.rs  handlers.rs  repository.rs  routes.rs  use_cases.rs
src/modules/payment/: domain.rs  errors.rs  mod.rs  repository.rs  use_cases.rs
src/modules/settlement/: domain.rs  errors.rs  repository.rs  use_cases.rs
src/modules/wallet/: domain.rs  errors.rs  generate_use_case.rs  handlers.rs  key_domain.rs  key_repository.rs  mod.rs  repository.rs  routes.rs  use_cases.rs
src/modules/webhook/: domain.rs  errors.rs  handlers.rs  repository.rs  routes.rs  use_cases.rs
src/observability/: metrics.rs  tracing.rs
