[package]
name = "crypto-payment-gateway"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8"
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.6", features = ["trace", "cors"] }

serde = { version = "1", features = ["derive"] }
serde_json = "1"

sqlx = { version = "0.9", features = ["runtime-tokio", "tls-rustls", "postgres", "uuid", "chrono", "migrate"] }

redis = { version = "0.25", features = ["tokio-comp"] }

config = "0.15"
dotenvy = "0.15"

tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "2"
anyhow = "1"
async-trait = "0.1.89"

[dev-dependencies]
tokio-test = "0.4"
