[package]
name = "crypto-payment-gateway"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8", features = ["macros"] }
tokio = { version = "1", features = ["full", "signal"] }
tower = { version = "0.5", features = ["timeout", "limit"] }
tower-http = { version = "0.6", features = ["trace", "cors", "request-id", "set-header", "timeout"] }

serde = { version = "1", features = ["derive"] }
serde_json = "1"

sqlx = { version = "0.9", features = ["runtime-tokio", "tls-rustls", "postgres", "uuid", "chrono", "migrate", "rust_decimal"] }
redis = { version = "0.25", features = ["tokio-comp"] }

config = "0.15"
dotenvy = "0.15"

tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tracing-opentelemetry = "0.28"
opentelemetry = { version = "0.27" }
opentelemetry_sdk = { version = "0.27", features = ["rt-tokio"] }
opentelemetry-otlp = { version = "0.27", features = ["tonic", "grpc-tonic"] }
opentelemetry-semantic-conventions = "0.27"

uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "2"
anyhow = "1"
async-trait = "0.1.89"
rust_decimal = { version = "1.42.1", features = ["serde-with-str", "db-postgres"] }
reqwest = { version = "0.13.4", features = ["json"] }

hmac = "0.12"
sha2 = "0.10"
hex = "0.4"

prometheus = { version = "0.13", features = ["process"] }
axum-prometheus = "0.7"

governor = "0.6"

[dev-dependencies]
tokio-test = "0.4"